--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -41,6 +41,23 @@
                            id="srch-term">
                     <div class="input-group-btn">
                         <button type="submit" class="btn"><span class="glyphicon glyphicon-search"></span></button>
+                    </div>
+                    
+                    <span class="input-group-addon buscaFiltro">
+                        <input id="checkInstrumentos" type="checkbox" aria-label="...">
+                        Instrumentos
+                    </span>
+
+                    <span class="input-group-addon buscaFiltro">
+                        <input id="checkEstilos" type="checkbox" aria-label="...">
+                        Estilos preferidos
+                    </span>
+
+                    <span class="input-group-addon buscaFiltro">
+                        <input id="checkInteresse" type="checkbox" aria-label="...">
+                        Interesse
+                    </span>
+
             </form>
 
 
@@ -157,7 +174,7 @@
 
 
     <!-- exibe anuncios -->
-    <div class="panel panel-default">
+    <div class="panel panel-defaul>
         <div class="panel-heading">
             <i class="fa fa-clock-o fa-fw"></i> Nossos anúncios
         </div>
@@ -165,6 +182,7 @@
         <div class="panel-body">
             <ul class="timeline">
 
+                <!--main-->
                 <div class="container" id="main">
                     @if(erro) {
                     <div id="erroAlerta" class="alert alert-danger alert-dismissible" role="alert">
@@ -178,7 +196,8 @@
                         @for(anuncio <- anuncios) {
                         <div class="col-md-4 col-sm-6 anuncio">
                             <div class="panel panel-default">
-                                <div class="panel-heading"><a href="" data-toggle="modal" data-target="#finalizarModal" class="pull-right finalizarAnuncio">Finalizar</a> <h4
+                                <div class="panel-heading"><a href="" data-toggle="modal" data-target="#finalizarModal@anuncio.getId()" class="pull-right
+                        finalizarAnuncio">Finalizar</a> <h4
                                         class="anuncioTitulo">@anuncio.getTitulo()</h4></div>
                                 <div class="panel-body">
                                     <p>@anuncio.getDescricao()</p>
@@ -201,18 +220,73 @@
 
                                     <hr>
 
-                                    <div class="input-group">
-                                        <div class="input-group-btn">
-                                            <button class="btn btn-default"><i class="glyphicon glyphicon-share"></i></button>
+                                    <form action="@routes.Application.fazerPergunta(anuncio.getId())" method="POST">
+                                        <div class="input-group">
+                                            <div class="input-group-btn">
+                                                <button id="submitFormFazerPergunta@anuncio.getId()" type="submit" class="btn btn-default"><i class="glyphicon glyphicon-share"></i></button>
+                                            </div>
+                                            <input id="formFazerPergunta@anuncio.getId()" name="pergunta" type="text" class="form-control" placeholder="Faça uma pergunta"
+                                                   required pattern=".*\S+.*">
                                         </div>
-                                        <input type="text" class="form-control" placeholder="Faça uma pergunta">
+                                    </form>
+
+                                    <hr>
+
+                                    @for(conversa <- anuncio.getConversas()) {
+                                    @if(conversa.getPergunta() != null) {
+                                    <div class="pergunta">
+                                        <p>@conversa.getPergunta()</p>
                                     </div>
+
+                                    @if(conversa.getResposta == null) {
+                                    <a id="botaoResponderPergunta@anuncio.getId()" href="" data-toggle="modal" data-target="#responderModal@conversa.getId()"
+                                       class="finalizarAnuncio">Responder</a>
+
+                                    <div class="modal fade" id="responderModal@conversa.getId()">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                                    <h4 class="modal-title">Resposta</h4>
+                                                </div>
+
+                                                <div class="modal-body">
+                                                    <form action="@routes.Application.responderPergunta(conversa.getId(), anuncio.getId())" method="POST">
+                                                        <div class="form-group">
+                                                            <label for="inputCodigo">Código</label>
+                                                            <input name="codigo" type="text" class="form-control" id="inputCodigo" placeholder="Código do seu anúncio"
+                                                                   required pattern=".*\S+.*">
+                                                        </div>
+
+                                                        <div class="form-group">
+                                                            <label>Resposta</label>
+                                                            <input name="resposta" type="text" class="form-control" id="inputResposta" placeholder="Sua resposta"
+                                                                   required pattern=".*\S+.*">
+                                                        </div>
+
+                                                        <button id="submitResponderPergunta" type="submit" class="btn btn-primary">Enviar</button>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    }
+                                    }
+
+                                    @if(conversa.getResposta != null) {
+                                    <div class="resposta">
+                                        <p>@conversa.getResposta()</p>
+                                    </div>
+                                    }
+
+                                    <hr>
+                                    }
 
                                 </div>
                             </div>
                         </div>
 
-                        <div class="modal fade" id="finalizarModal">
+                        <div class="modal fade" id="finalizarModal@anuncio.getId()">
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
@@ -226,7 +300,24 @@
                                                 <input name="finalizar" type="text" class="form-control" id="inputFinalizar" placeholder="Código do seu anúncio" required pattern=".*\S+.*">
                                             </div>
 
-                                            <button type="submit" class="btn btn-primary">Enviar</button>
+                                            <div class="form-group">
+                                                <label>Você encontrou os parceiros que procurava?</label>
+                                                <div class="radio">
+                                                    <label>
+                                                        <input type="radio" name="encontrouParceiros" id="inputEncontrou1" value="Sim" required>
+                                                        Sim
+                                                    </label>
+                                                </div>
+
+                                                <div class="radio">
+                                                    <label>
+                                                        <input type="radio" name="encontrouParceiros" id="inputEncontrou2" value="Não" required>
+                                                        Não
+                                                    </label>
+                                                </div>
+                                            </div>
+
+                                            <button id="submitFinalizar@anuncio.getId()" type="submit" class="btn btn-primary">Enviar</button>
                                         </form>
                                     </div>
                                 </div>
@@ -340,78 +431,6 @@
 
 
 
-    <!--main-->
-    <div class="container" id="main">
-        @if(erro) {
-        <div id="erroAlerta" class="alert alert-danger alert-dismissible" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            O código que você inseriu está incorreto.
-        </div>
-        }
-
-        <div id="anuncios" class="row">
-
-            @for(anuncio <- anuncios) {
-            <div class="col-md-4 col-sm-6 anuncio">
-                <div class="panel panel-default">
-                    <div class="panel-heading"><a href="" data-toggle="modal" data-target="#finalizarModal" class="pull-right finalizarAnuncio">Finalizar</a> <h4
-                            class="anuncioTitulo">@anuncio.getTitulo()</h4></div>
-                    <div class="panel-body">
-                        <p>@anuncio.getDescricao()</p>
-                        <div class="clearfix"></div>
-                        <hr>
-
-                        <p><strong>Cidade:</strong> @anuncio.getCidade()</p>
-                        <p><strong>Bairro:</strong> @anuncio.getBairro()</p>
-
-                        <p class="anuncioInstrumentos"><strong>Instrumentos:</strong> @anuncio.getInstrumentos()</p>
-                        @if(!anuncio.isEstilosEmpty) {
-                        <p class="anuncioEstilos"><strong>Estilos que gosta:</strong> @anuncio.getEstilos()</p>
-                        }
-                        @if(!anuncio.isEstilosBanidosEmpty) {
-                        <p><strong>Estilos que não gosta:</strong> @anuncio.getEstilosBanidos()</p>
-                        }
-
-                        <p><strong>Contatos:</strong> @anuncio.getContatos()</p>
-                        <p class="anuncioInteresse"><strong>Interesse:</strong> @anuncio.getInteresses()</p>
-
-                        <hr>
-
-                        <div class="input-group">
-                            <div class="input-group-btn">
-                                <button class="btn btn-default"><i class="glyphicon glyphicon-share"></i></button>
-                            </div>
-                            <input type="text" class="form-control" placeholder="Faça uma pergunta">
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-
-            <div class="modal fade" id="finalizarModal">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                            <h4 class="modal-title">Insira o código do seu anúncio</h4>
-                        </div>
-
-                        <div class="modal-body">
-                            <form action="@routes.Application.finalizaAnuncio(anuncio.getCodigo(), anuncio.getId())" method="POST">
-                                <div class="form-group">
-                                    <input name="finalizar" type="text" class="form-control" id="inputFinalizar" placeholder="Código do seu anúncio" required pattern=".*\S+.*">
-                                </div>
-
-                                <button type="submit" class="btn btn-primary">Enviar</button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            }
-
-        </div>
-    </div>
 
 
 
